fix(importer): prevent OOM by filtering out older process versions early on (#2038)
* fix(importer): prevent oom by filtering out older process versions early on

* fix tests

(cherry picked from commit 6713bd7010cbd93ca7276d95b91baa034c872f25)